--- a/project.yml
+++ b/project.yml
@@ -1,4 +1,4 @@
-title          : "Introduction to DataCamp Projects"
+title          : "Introduction to DataCamp Projects (python)"
 description    : >
   If you've never done a DataCamp project, this is the place to start! 
 language       : python
